# Trivial-Road-LI1

./: .gitignore  2022li1g031.cabal  README.md  todo.txt
src/: Bot.hs  LI12223.hs  Main.hs  Tarefa1_2022li1g031.hs  Tarefa2_2022li1g031.hs  Tarefa3_2022li1g031.hs  Tarefa4_2022li1g031.hs  Tarefa5_2022li1g031.hs  Tarefa6_2022li1g031.hs
src/Gloss_Functions/: DesenhaEstado.hs  GlossData.hs  PlayGame.hs  ReageEvento.hs  ReageTempo.hs
src/Gloss_Functions/DesenhaEstados/: DesenhaBot.hs  DesenhaDerrota.hs  DesenhaJogo.hs  DesenhaJogoFluido.hs  DesenhaMenu.hs  DesenhaPausa.hs  DesenhaSobre.hs
src/Gloss_Functions/JogoFluido/: AnimaMapaFluido.hs  DesenhaJogoFluido.hs  JogoFluido.hs  JogoFluidoTerminou.hs
src/Gloss_Functions/ReageEventos/: ReageEventoBot.hs  ReageEventoDerrota.hs  ReageEventoJogo.hs  ReageEventoMenu.hs  ReageEventoPausa.hs  ReageEventoSobre.hs
src/Gloss_Functions/ReageTempo/: ReageTempoBot.hs  ReageTempoJogo.hs
src/Utils/: Utils.hs
src/images/: arroz
tests/: Spec.hs  Tarefa1_2022li1g031_Spec.hs  Tarefa2_2022li1g031_Spec.hs  Tarefa3_2022li1g031_Spec.hs  Tarefa4_2022li1g031_Spec.hs  Tarefa5_2022li1g031_Spec.hs  Utils_Spec.hs
