cabal-version:      2.4
name:               2022li1g031
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Afonso Gonçalves Pedreira <a104537@alunos.uminho.pt>
                    Dário Silva Guimarães  <a104344@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g031
    Tarefa2_2022li1g031
    Tarefa3_2022li1g031
    Tarefa4_2022li1g031
  build-depends:    base ^>=4.16.3.0, random, gloss,directory
  build-depends:    base ^>=4.16.3.0, random
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g031
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g031
    Tarefa2_2022li1g031
    Tarefa3_2022li1g031
    Tarefa4_2022li1g031
  build-depends:    base ^>=4.16.3.0, random
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g031-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g031
    Tarefa2_2022li1g031
    Tarefa3_2022li1g031
    Tarefa4_2022li1g031
    Tarefa1_2022li1g031_Spec
    Tarefa2_2022li1g031_Spec
    Tarefa3_2022li1g031_Spec
    Tarefa4_2022li1g031_Spec
  build-depends:        base ^>=4.16.3.0, HUnit, random, gloss, directory
  hs-source-dirs:       tests src
  default-language:     Haskell2010
