cabal-version:      2.4
name:               2022li1g031
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Afonso Gonçalves Pedreira <a104537@alunos.uminho.pt>
                    Dário Silva Guimarães  <a104344@alunos.uminho.pt>

library
  exposed-modules:
    Main
    LI12223
    Tarefa1_2022li1g031
    Tarefa2_2022li1g031
    Tarefa3_2022li1g031
    Tarefa4_2022li1g031
    Tarefa5_2022li1g031
    Tarefa6_2022li1g031
    Bot
    Utils.Utils
    Gloss_Functions.DesenhaEstado
    Gloss_Functions.DesenhaEstados.DesenhaBot
    Gloss_Functions.DesenhaEstados.DesenhaDerrota
    Gloss_Functions.DesenhaEstados.DesenhaJogo
    Gloss_Functions.DesenhaEstados.DesenhaMenu
    Gloss_Functions.DesenhaEstados.DesenhaSobre
    Gloss_Functions.GlossData
    Gloss_Functions.JogoFluido.AnimaMapaFluido
    Gloss_Functions.JogoFluido.DesenhaJogoFluido
    Gloss_Functions.JogoFluido.JogoFluidoTerminou
    Gloss_Functions.PlayGame
    Gloss_Functions.ReageEvento
    Gloss_Functions.ReageEventos.ReageEventoBot
    Gloss_Functions.ReageEventos.ReageEventoDerrota
    Gloss_Functions.ReageEventos.ReageEventoJogo
    Gloss_Functions.ReageEventos.ReageEventoMenu
    Gloss_Functions.ReageEventos.ReageEventoPausa
    Gloss_Functions.ReageEventos.ReageEventoSobre
    Gloss_Functions.ReageTempo
    Gloss_Functions.ReageTempo.ReageTempoBot
    Gloss_Functions.ReageTempo.ReageTempoJogo
  build-depends:    base ^>=4.16.3.0, random, gloss, directory 
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g031
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g031
    Tarefa2_2022li1g031
    Tarefa3_2022li1g031
    Tarefa4_2022li1g031
    Tarefa5_2022li1g031
    Tarefa6_2022li1g031
    Bot
    Utils.Utils
    Gloss_Functions.DesenhaEstado
    Gloss_Functions.DesenhaEstados.DesenhaBot
    Gloss_Functions.DesenhaEstados.DesenhaDerrota
    Gloss_Functions.DesenhaEstados.DesenhaJogo
    Gloss_Functions.DesenhaEstados.DesenhaMenu
    Gloss_Functions.DesenhaEstados.DesenhaSobre
    Gloss_Functions.GlossData
    Gloss_Functions.JogoFluido.AnimaMapaFluido
    Gloss_Functions.JogoFluido.DesenhaJogoFluido
    Gloss_Functions.JogoFluido.JogoFluidoTerminou
    Gloss_Functions.PlayGame
    Gloss_Functions.ReageEvento
    Gloss_Functions.ReageEventos.ReageEventoBot
    Gloss_Functions.ReageEventos.ReageEventoDerrota
    Gloss_Functions.ReageEventos.ReageEventoJogo
    Gloss_Functions.ReageEventos.ReageEventoMenu
    Gloss_Functions.ReageEventos.ReageEventoPausa
    Gloss_Functions.ReageEventos.ReageEventoSobre
    Gloss_Functions.ReageTempo
    Gloss_Functions.ReageTempo.ReageTempoBot
    Gloss_Functions.ReageTempo.ReageTempoJogo
    Utils.Utils
  build-depends:    base ^>=4.16.3.0, random, gloss, directory
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g031-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g031
    Tarefa2_2022li1g031
    Tarefa3_2022li1g031
    Tarefa4_2022li1g031
    Tarefa5_2022li1g031
    Tarefa6_2022li1g031
    Bot
    Utils.Utils
    Gloss_Functions.DesenhaEstado
    Gloss_Functions.DesenhaEstados.DesenhaBot
    Gloss_Functions.DesenhaEstados.DesenhaDerrota
    Gloss_Functions.DesenhaEstados.DesenhaJogo
    Gloss_Functions.DesenhaEstados.DesenhaMenu
    Gloss_Functions.DesenhaEstados.DesenhaSobre
    Gloss_Functions.GlossData
    Gloss_Functions.JogoFluido.AnimaMapaFluido
    Gloss_Functions.JogoFluido.DesenhaJogoFluido
    Gloss_Functions.JogoFluido.JogoFluidoTerminou
    Gloss_Functions.PlayGame
    Gloss_Functions.ReageEvento
    Gloss_Functions.ReageEventos.ReageEventoBot
    Gloss_Functions.ReageEventos.ReageEventoDerrota
    Gloss_Functions.ReageEventos.ReageEventoJogo
    Gloss_Functions.ReageEventos.ReageEventoMenu
    Gloss_Functions.ReageEventos.ReageEventoPausa
    Gloss_Functions.ReageEventos.ReageEventoSobre
    Gloss_Functions.ReageTempo
    Gloss_Functions.ReageTempo.ReageTempoBot
    Gloss_Functions.ReageTempo.ReageTempoJogo
    Utils.Utils
    
    Tarefa1_2022li1g031_Spec
    Tarefa2_2022li1g031_Spec
    Tarefa3_2022li1g031_Spec
    Tarefa4_2022li1g031_Spec
    Tarefa5_2022li1g031_Spec
    Utils_Spec
  build-depends:        base ^>=4.16.3.0, HUnit, random, gloss, directory
  hs-source-dirs:       tests src
  default-language:     Haskell2010
